PL-645 Fix it Multiple Cards Stacked fixes: * Intro is not centred * Remove shouty text and reduce cards heading line spacing * Reduce font size on mobile * Move pinch class up to top level and replace section with div Also made the cards full width on mobile

--- a/Boilerplate/src/sass/modules/_spotlight.scss
+++ b/Boilerplate/src/sass/modules/_spotlight.scss
@@ -5,13 +5,12 @@
     }
     
     &__heading {
-        @include font-size(4.8);
-        text-transform: uppercase;
+        @include font-size($h1--large);
         text-align: center;
     }
 
     &__intro {
-        @include font-size(2);
+        @include font-size($h4);
         text-align: center;
     }
 
@@ -80,10 +79,10 @@
 
     &__heading {
         @include font-size(1.8);
-        margin: 0.5em auto;
-        text-transform: uppercase;
-        font-weight: 500;
         color: $grey;
+        font-weight: 500;
+        line-height: 1.4;
+        margin: 0.5em auto;
     }
 
     &__icon {
@@ -144,5 +143,27 @@
 
     &__cta {
         padding: 20px 0 10px 0;
+    }
+}
+
+@include mq($until: mobile-landscape) {
+    .spotlight {
+        .spotlight__heading {
+            @include font-size($h1);
+        }
+
+        .spotlight__intro {
+            @include font-size($paragraph-emphasis);
+        }
+    }
+}
+
+// Let the cards go full width on mobile.
+@include mq($until: mobile-landscape) {
+    .spotlight {
+        .spotlight__list-item {
+            max-width: 100%;
+            width: 100%;
+        }
     }
 }
